# Robotic_Arm

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  install_packages.sh  launch_container.sh  projected_points.npy
.github/workflows/: main.yml
Arm_Urdf/launch/: new.launch
Arm_Urdf/old_arm_description/urdf/urdf/: arm_urdf.urdf
Arm_Urdf/scripts/: IK_gazebo.py  IK_set_point_gazebo.py  distance_calc.py  pt_tracking.py  pt_tracking2.py  stereo_vis.py  teleop_arm.py  test.py  vis_ser.py
Arm_Urdf/urdf/: Arm_Urdf.urdf
arm_hw/: CMakeLists.txt  hw_int_arm.cpp  package.xml
arm_urdf/urdf/: arm_urdf.urdf
log/: latest_list
moveit_pkg/: .setup_assistant
moveit_pkg/config/: joint_trajectory_controller.yaml
moveit_pkg/launch/: new_launch.launch
src/: CMakeLists.txt
src/Arm_Urdf/: package.xml
src/Arm_Urdf/config/: initial_joint_positions.yaml  joint_names_Arm_Urdf.yaml  joint_trajectory_control.yaml
src/Arm_Urdf/launch/: new.launch
src/Arm_Urdf/scripts/: IK_gazebo.py  distance_calc.py
src/Arm_Urdf/urdf/: Arm_Urdf.urdf
src/Arm_Urdf/worlds/: custom_world_with_lighting.world
src/arm_moveit_config/: .setup_assistant  package.xml
src/arm_moveit_config/config/: Arm_Urdf.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/arm_moveit_config/launch/: final_arm_launch.launch  gazebo.launch  keyboard_launch.launch  move_group.launch  moveit_updated.rviz
src/arm_urdf/urdf/: arm_urdf.urdf
src/autonomous_typing/: CMakeLists.txt  README.md
src/autonomous_typing copy/launch/: test.launch
src/autonomous_typing copy/src/redundant_code/: final.py
src/autonomous_typing/config/: Default.perspective
src/autonomous_typing/launch/: test.launch
src/autonomous_typing/src/: autonomous.py  autonomous_old.py  detection_node.py  final.py  keyboard_visualizer.py  move_to_pose.py  renforced_key_detection.py  test.py  typing_node.py  typing_node_ik.py  yolo_det.py  yolo_key_det.py  yolo_seg.py
src/autonomous_typing/src/redundant_code/: final0.py  gui.py  keyboard_typing.py  keyboard_typing2.py  keyboard_typing3.py  kinova_autonom.py  yolo_det.py  yolo_key_det.py  yolo_key_typing.py  yolo_seg_save.py
src/autonomous_typing/urdf/Razer_BlackWidow/: model.sdf
src/keyboard_detector/: CMakeLists.txt  package.xml
src/keyboard_detector/launch/: keyboard_detector.launch
src/keyboard_detector/msg/: KeyboardDetection.msg  KeyboardDetectionArray.msg
src/keyboard_detector/scripts/: ipcam_publisher.py  keyboard_detector_node.py
src/stereo_vision/launch/: box.launch
src/stereo_vision/scripts/: detect_cylinder_function.py  detect_cylinder_xyz.py  gripper_position.py
src/teleop_arm/scripts/: cylinder_primitive.py  cylinder_primitive_2.py  cylinder_primitive_3.py  cylinder_primitive_final.py  detect_cylinder_function.py  gripper_fingers.py  moveit_teleop_niwesh.py  teleop_controller_final.py  teleop_controller_test1.py  testing_gaming_controller.py
src/teleop_arm/scripts/main_scripts/: cylinder_primitive_final.py  detect_cylinder_depth_camera.py  detect_cylinder_function.py
src/teleop_arm/scripts/testing_scripts/: cylinder_primitive_3.py
src/teleop_arm/urdf/: cylinder.urdf  cylinder_container.urdf  drawer.urdf
teleop_arm/scripts/: teleop_arm.py
videos/: working.webm
